Feat: vacation routes documentation created
